# config

./: .codedocs  .travis.yml  CMakeLists.txt  COPYING  Makefile.am  OpenICC_device_config_DB.json  README  README.md  bootstrap.sh  configure.ac  configure.in  makefile  makefile.simple  openicc.pc.in  openicc_config.c  openicc_config.h  openicc_config_read.c
OpenICC/: openicc_config.h  openicc_version.h.in
cmake/: CMakeLists.txt  OpenIccConfig.cmake.in
cmake/Modules/: CodeCoverage.cmake
doc/: CMakeLists.txt  Doxyfile.in  doxygen.footer.dox  doxymentation.dox
docs/: AUTHORS  AUTHORS.md  CMakeLists.txt  COPYING  COPYING.md  doxygen.footer.dox  doxygen.header.dox  doxymentation.dox
examples/: openicc_config_read.c
extras/: CMakeLists.txt  openicc.pc.in  openicc.spec.in
extras/codedocs/: Doxyfile
oyjl/: oyjl_tree.c
oyjl/oyjl-args-qml/include/: process.h
oyjl/oyjl-args-qml/qml/: main.qml
oyjl/po/: cs.po  de.po  eo.po  eu.po  fr.po  oyjl.pot  ru.po
po/: OpenICC.pot  cs.po  de.po  eo.po  eu.po  fr.po  openicc.pot  oyranos.pot  ru.po
src/: CMakeLists.txt  openicc_config.c  openicc_config_internal.h  xdg_bds.c
src/examples/: CMakeLists.txt  openicc_config_read.c
src/include/: CMakeLists.txt  openicc_config.h  openicc_core.h  openicc_db.h  openicc_version.h.in
src/libopenicc/: CMakeLists.txt  openicc_args.c  openicc_conf.h.in  openicc_config.c  openicc_config_internal.h  openicc_core.c  openicc_db.c  openicc_io.c  openicc_string.c  oyjl_core.c  oyjl_tree.c  oyjl_tree.h  oyjl_tree_internal.h  xdg_bds.c
src/simple/: openicc_version.h
src/tests/: CMakeLists.txt  test.c
src/tools/: CMakeLists.txt  openicc-device-de.md  openicc-device.md  openicc_device.c  openicc_json.c  openicc_macros.h
src/tools/openicc-json-qml/: app.qrc
src/tools/openicc-json-qml/qml/: LSlider.qml  OptionsList.qml  main.qml
src/tools/openicc-json-qml/translations/: app_de.ts
utils/: openicc_device.c  openicc_macros.h
