#pkg-config files
CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.pc.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}.pc"
		@ONLY
       )

CONFIGURE_FILE(
		"${CMAKE_CURRENT_SOURCE_DIR}/${PACKAGE_NAME}.spec.in"
		"${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}.spec"
		@ONLY
       )

INSTALL( FILES
		"${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}.pc"
		DESTINATION lib${LIB_SUFFIX}/${TARGET_PKGCONFIG_FOLDER}
       )

